<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_splash_screen"
            android:icon="@drawable/ic_store_mall_directory_24dp"
            android:title="@string/nav_main_page" />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_wb_cloudy_24dp"
            android:title="@string/nav_weather" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_gallery" />
    </group>

    <item android:title="@string/nonclicable">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_quick_contacts_mail_24dp"
                android:title="@string/nav_first_nonclicable" />
            <item
                android:id="@+id/nav_camera"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/second_nonclicable" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/third_nonclicable" />
        </menu>
    </item>

</menu>
