<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:background="@color/fragmentBackground"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/fragment_splash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/logo_height"
            android:layout_alignParentTop="true"
            android:background="@drawable/logo" />

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/text_title"
            android:textColor="@color/textColorWhite"
            android:textSize="@dimen/text_size_25" />


        <TextView
            android:id="@+id/text_view_in_one_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_title"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:text="@string/text_all_in_one_place"
            android:textColor="@color/textColorWhite" />

        <LinearLayout
            android:id="@+id/columns_root"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_in_one_place"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_utility"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/text_utility"
                android:textColor="@color/textColorWhite" />

            <TextView
                android:id="@+id/text_vervion_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/text_version_info"
                android:textColor="@color/textColorWhite" />
        </LinearLayout>

        <TextView
            android:id="@+id/textId_nice_using"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/columns_root"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/text_nice_using"
            android:textColor="@color/textColorWhite"
            android:textSize="@dimen/text_size_18" />

        <TextView
            android:id="@+id/text_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/text_view_author"
            android:textColor="@color/textColorWhite" />

    </RelativeLayout>
</ScrollView>