<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_weather"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar">

    <TextView
        android:id="@+id/city_name_weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:textColor="@color/textColorWhite"
        android:textSize="@dimen/text_size_30" />

    <RelativeLayout
        android:id="@+id/weather_icon_layout"
        android:layout_width="@dimen/width_100dp"
        android:layout_height="@dimen/height_100dp"
        android:layout_below="@+id/city_name_weather"
        android:layout_marginStart="@dimen/activity_vertical_margin">

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/icon_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/city_name_weather"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_toEndOf="@+id/weather_icon_layout">

        <TextView
            android:id="@+id/temp_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="@color/textColorWhite"
            android:textSize="@dimen/text_size_35" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/weather_details_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/weather_icon_layout"
        android:layout_margin="@dimen/margin_20">

        <LinearLayout
            android:id="@+id/weather_condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sur_rise_text"
                android:textColor="@color/textColorWhite"
                android:textSize="@dimen/text_size_18" />

            <TextView
                android:id="@+id/weather_condition_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:textColor="@color/textColorWhite"
                android:textSize="@dimen/text_size_18" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sunrise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sur_rise_text"
                android:textColor="@color/textColorWhite"
                android:textSize="@dimen/text_size_18" />

            <TextView
                android:id="@+id/sunrise_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:textColor="@color/textColorWhite"
                android:textSize="@dimen/text_size_18" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/humidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity_text"
                android:textColor="@color/textColorWhite"
                android:textSize="@dimen/text_size_18" />

            <TextView
                android:id="@+id/humidity_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:textColor="@color/textColorWhite"
                android:textSize="@dimen/text_size_18" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/clouds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cloud_text"
                android:textColor="@color/textColorWhite"
                android:textSize="@dimen/text_size_18" />

            <TextView
                android:id="@+id/clouds_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:textColor="@color/textColorWhite"
                android:textSize="@dimen/text_size_18" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/wind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_text"
                android:textColor="@color/textColorWhite"
                android:textSize="@dimen/text_size_18" />

            <TextView
                android:id="@+id/wind_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:textColor="@color/textColorWhite"
                android:textSize="@dimen/text_size_18" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure"
                android:textColor="@color/textColorWhite"
                android:textSize="@dimen/text_size_18" />

            <TextView
                android:id="@+id/pressure_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:textColor="@color/textColorWhite"
                android:textSize="@dimen/text_size_18" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>